Load Caveat font in the Google way to fix missing font on IE
IE doesn’t support `woff2`. For now I will load the font with `<link>`,
instead of `base64` inlining.

--- a/_sass/defaults/_defaults.scss
+++ b/_sass/defaults/_defaults.scss
@@ -14,6 +14,7 @@ body {
 }
 
 html {
+  font-display: block;
   font-family: token("font-family", "default");
   font-size: font-size-px("uno");
   line-height: token("line-height", "body");
